[tts] Cache : apply minor code reviews
Signed-off-by: Gwendal Roulleau <gwendal.roulleau@gmail.com>